2025-05-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pic14/gen.c,
	  src/pic14/gen.h,
	  src/pic14/genarith.c:
	  Fix pic14 side of bug #3851.
	* src/z80/gen.c,
	  src/z80/mappings.i:
	  GAS syntax support fixes, partly from parts of patch #484 by Atirut Wattanamongkol.
	* support/regression/tests/dhrystone.c,
	  support/regression/tests/coremark.c:
	  Add test based on Coremark.

2025-05-23 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/peeph.def:
   	  Improve load after load and store after store rules.
 	* src/mos6502/stackops.c:
 	  Implement multiple code paths for adjustStack and select the fastest.
   	* src/mos6502/gen.c:   	
   	  save A only when sendSet is not empty.
   	  
2025-05-21 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.h,
   	  src/mos6502/gen.c,
   	  src/mos6502/genand.c,
   	  src/mos6502/genor.c,
   	  src/mos6502/genxor.c,
   	  src/mos6502/genplus.c,
   	  src/mos6502/genminus.c,
   	  src/mos6502/genlshift.c,
  	  src/mos6502/genrshift.c,
   	  src/mos6502/stackops.c,
   	  src/mos6502/tempops.c:
   	  Code refactoring to improve maintainability.
 	* src/mos6502/gen.c,
   	  src/mos6502/genplus.c,
   	  src/mos6502/genminus.c:
   	  genPlus and genMinus improvements.
   	  
2025-05-20 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.c:
   	  genRightShift improvements.
   	  
2025-05-19 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.c:
   	  Additional DPTR optimizations.

2025-05-16 Gabriele Gorla <gorlik@yahoo.com>

   	* src/mos6502/gen.c:
   	  Small genPointerGet improvement.

2025-05-15 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/peeph.def:
  	  Remove dead XY rule. Add genPlus/Minus optimization.
   	* src/mos6502/gen.c:
   	  Enable tracking of regTemp loads/stores.
  	  Enable tracking of other regTemp operations.
  	  
2025-05-13 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos65c02/_strlen.s,
  	  device/lib/mos65c02/strlen.s,
  	  device/lib/mos65c02/memcpy.s,