@@ -2528,7 +2528,7 @@ setIncludePath (void)
 
       tempSet = processStrSet (dataDirsSet, NULL, INCLUDE_DIR_SUFFIX, NULL);
       includeDirsSet = processStrSet (tempSet, NULL, DIR_SEPARATOR_STRING, NULL);
-      if (TARGET_IS_RABBIT) // Rabbits have a shared include directory.
+      if (TARGET_RABBIT_LIKE) // Rabbits have a shared include directory.
         includeDirsSet = processStrSet (includeDirsSet, NULL, "rab", NULL);
       else
         includeDirsSet = processStrSet (includeDirsSet, NULL, port->target, NULL);
