@@ -10,6 +10,17 @@
 	* support/regression/tests/dhrystone.c,
 	  support/regression/tests/coremark.c:
 	  Add test based on Coremark.
+	* src/port.h,
+	  src/SDCCast.c,
+	  src/SDCCglue.c,
+	  src/SDCCicode.c,
+	  src/SDCClrange.c,
+	  src/SDCCmain.c,
+	  src/SDCCopt.c,
+	  src/SDCCpeeph.c,
+	  src/SDCCsymt.c,
+	  src/z80/main.c:
+	  Prepare for future f8l, r4k, r5k, r6k ports.
 
 2025-05-23 Gabriele Gorla <gorlik@yahoo.com>
 
